Modified deployment process for caCore generation
SVN-Revision: 23948

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -85,3 +85,6 @@ empi.database.schema=
 
 #URL needed for category creation.
 Application.url=
+
+#Set the location where caCore is generated
+cacore.deployable.location=
