Changes for making the grid refresh time interval configurable
property "jobGrid.refresh.timeInterval" added in bulkOperations.properties file in caTissue, and updated bulkoperator.jar and bulkOperation.zip checking-in caTissue

SVN-Revision: 23950

--- a/bulkOperation.properties
+++ b/bulkOperation.properties
@@ -1,2 +1,3 @@
 #bulk operation properties
 bulkoperator.appservice.class=edu.wustl.catissuecore.client.CaTissueAppServiceImpl
+jobGrid.refresh.timeInterval=5
