--- a/catissuecore-properties/log4j.properties
+++ b/catissuecore-properties/log4j.properties
@@ -1,6 +1,6 @@
 # Set root category priority to INFO and its only appender to CONSOLE.
 #log4j.rootCategory=INFO, CONSOLE
-log4j.rootCategory=INFO, CONSOLE, LOGFILE
+log4j.rootCategory=ERROR, CONSOLE, LOGFILE
 #log4j.rootCategory=INFO, CONSOLE, LOGFILE
 
 # Set the enterprise logger category to FATAL and its only appender to CONSOLE.
@@ -8,7 +8,7 @@ log4j.rootCategory=INFO, CONSOLE, LOGFILE
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.CONSOLE.Threshold=INFO
+log4j.appender.CONSOLE.Threshold=ERROR
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.CONSOLE.layout.ConversionPattern=%5p %d{HH:mm:ss,SSS} (%C{1}) - %m%n
 
@@ -18,7 +18,7 @@ log4j.appender.LOGFILE.File=@@jbosshome@@/log/catissue.log
 log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.MaxFileSize=1024KB
 log4j.appender.LOGFILE.MaxBackupIndex=7
-log4j.appender.LOGFILE.Threshold=INFO
+log4j.appender.LOGFILE.Threshold=ERROR
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 #log4j.appender.LOGFILE.layout.ConversionPattern=%-4r %d [%t] %-5p %C{3} - %m%n
 log4j.appender.LOGFILE.layout.ConversionPattern= %-5p %d %C{3} - %m%n
@@ -28,11 +28,11 @@ log4j.appender.HIBERNATE.File=@@jbosshome@@/log/hibernatesql.log
 log4j.appender.HIBERNATE.Append=true
 log4j.appender.HIBERNATE.MaxFileSize=1024KB
 log4j.appender.HIBERNATE.MaxBackupIndex=7
-log4j.appender.HIBERNATE.Threshold=INFO
+log4j.appender.HIBERNATE.Threshold=ERROR
 log4j.appender.HIBERNATE.layout=org.apache.log4j.PatternLayout
 log4j.appender.HIBERNATE.layout.ConversionPattern= %-5p %d %c - %m%n
 
-log4j.logger.edu.wustl.catissuecore=info, LOGFILE
+log4j.logger.edu.wustl.catissuecore=ERROR, LOGFILE
 
 #For logging hibernate api messages uncomment either of the following
 ### log just the SQL
