Bug 15629 -  Cross scripting support in caTissue suite
SVN-Revision: 24001

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2440,3 +2440,7 @@ specimenclass.tissue=Tissue Specimen
 specimenclass.fluid=Fluid Specimen
 specimenclass.cell=Cell Specimen
 specimenclass.molecular=Molecular Specimen
+
+#For Cross scripting support.
+xss.failure.redirect.path=XssViolation.do
+errors.xssvulnerable=<div>The highlighted fields contain special characters that are not acceptable by the application. Please provide the correct information for these fields.</div>
