Modified Message. need to make it more specific in next release.
SVN-Revision: 24004

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2443,4 +2443,4 @@ specimenclass.molecular=Molecular Specimen
 
 #For Cross scripting support.
 xss.failure.redirect.path=XssViolation.do
-errors.xssvulnerable=<div>The highlighted fields contain special characters that are not acceptable by the application. Please provide the correct information for these fields.</div>
+errors.xssvulnerable=<div>Some of the fields contain special characters that are not acceptable by the application. Please provide the correct information for these fields.</div>
