Bug Id : 15350 :  Hooking with all the three hook entities should be handled in query Code Reviewed By :Deepti Technical Details : None Unit Tested :N Unit Test case(s) id : N/A Developer Notes : Removed the hard coding of hook entity names.
SVN-Revision: 24011

--- a/WEB-INF/src/mainProtocolObjectQueries.properties
+++ b/WEB-INF/src/mainProtocolObjectQueries.properties
@@ -9,5 +9,7 @@ edu.wustl.catissuecore.domain.ProcedureEventParameters=Select procedureEventPara
 edu.wustl.catissuecore.domain.EmbeddedEventParameters=Select embeddedEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.EmbeddedEventParameters embeddedEventParameters where embeddedEventParameters.id =
 edu.wustl.catissuecore.domain.ReceivedEventParameters=Select receivedEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.ReceivedEventParameters receivedEventParameters where receivedEventParameters.id =
 edu.wustl.catissuecore.domain.DisposalEventParameters=Select disposalEventParameters.specimenEventParameters.specimen.id from edu.wustl.catissuecore.domain.DisposalEventParameters disposalEventParameters where disposalEventParameters.id =
-hookEntityQuery=Select recordEntry.participant.id from edu.wustl.catissuecore.domain.ParticipantRecordEntry recordEntry where recordEntry.id =
-hookEntity=edu.wustl.catissuecore.domain.deintegration.ParticipantRecordEntry
+edu.wustl.catissuecore.domain.deintegration.ParticipantRecordEntry=Select recordEntry.participant.id from edu.wustl.catissuecore.domain.deintegration.ParticipantRecordEntry recordEntry where recordEntry.id =
+edu.wustl.catissuecore.domain.deintegration.SCGRecordEntry=Select recordEntry.specimenCollectionGroup.id from edu.wustl.catissuecore.domain.deintegration.SCGRecordEntry recordEntry where recordEntry.id =
+edu.wustl.catissuecore.domain.deintegration.SpecimenRecordEntry=Select recordEntry.specimen.id from edu.wustl.catissuecore.domain.deintegration.SpecimenRecordEntry recordEntry where recordEntry.id =
+hookEntity=edu.wustl.catissuecore.domain.deintegration.ParticipantRecordEntry,edu.wustl.catissuecore.domain.deintegration.SCGRecordEntry,edu.wustl.catissuecore.domain.deintegration.SpecimenRecordEntry
