Setting the cacore deployable location property.
SVN-Revision: 24033

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -87,4 +87,4 @@ empi.database.schema=
 Application.url=
 
 #Set the location where caCore is generated
-cacore.deployable.location=
+cacore.deployable.location=./cacore_deployable
