--- a/caTissueSuite_Client/ApplicationResources.properties
+++ b/caTissueSuite_Client/ApplicationResources.properties
@@ -2378,7 +2378,8 @@ print.issue = Error while printing.
 
 #Bulk service
 bulk.operation.errors = {0}.
-bulk.operation.client.error=Error: Problem while instantiating a client session during bulk operation where URL is {0}, loginName is {1} and password is {2}.
+bulk.operation.client.error=Error: Problem while instantiating a client session during bulk operation where URL is {0}, loginName is {1} and password is {2} and please also verify given keystore.
+
 bulk.operation.file.not.found=Error\: Problem in locating the file(s) {0},{1}.   
 bulk.operation.request.param.error=Error: Problem in getting the request parameters.
 bulk.operation.client.login.error=Error\: No login details, please login before performing bulk operation.  
