Bug 15840 -  Bulk API cmd fails instead of printing help for incorrect values in the parameters,
SVN-Revision: 24069

--- a/caTissueSuite_Client/ApplicationResources.properties
+++ b/caTissueSuite_Client/ApplicationResources.properties
@@ -2378,7 +2378,7 @@ print.issue = Error while printing.
 
 #Bulk service
 bulk.operation.errors = {0}.
-bulk.operation.client.error=Error: Problem while instantiating a client session during bulk operation where URL is {0}, loginName is {1} and password is {2} and please also verify given keystore.
+bulk.operation.client.error=Error: Problem while instantiating a client session during bulk operation Error: Problem while instantiating a client session during bulk operation please verify URL, key store and login credentials.
 
 bulk.operation.file.not.found=Error\: Problem in locating the file(s) {0},{1}.   
 bulk.operation.request.param.error=Error: Problem in getting the request parameters.
