--- a/caTissueSuite_Client/ApplicationResources.properties
+++ b/caTissueSuite_Client/ApplicationResources.properties
@@ -2378,8 +2378,7 @@ print.issue = Error while printing.
 
 #Bulk service
 bulk.operation.errors = {0}.
-bulk.operation.client.error=Error: Problem while instantiating a client session during bulk operation Error: Problem while instantiating a client session during bulk operation please verify URL, key store and login credentials.
-
+bulk.operation.client.error=Error: Problem while instantiating a client session during bulk operation please verify URL, key store and login credentials.
 bulk.operation.file.not.found=Error\: Problem in locating the file(s) {0},{1}.   
 bulk.operation.request.param.error=Error: Problem in getting the request parameters.
 bulk.operation.client.login.error=Error\: No login details, please login before performing bulk operation.  
