Bug 16019 -  Facility to send alert email in case of major exception in catissue.
SVN-Revision: 24134

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -36,6 +36,18 @@ email.administrative.emailAddress=
 email.sendEmailFrom.emailAddress=
 email.mailServer=
 
+# Option to use the common package's email handler on server exception. Values = [true|false]
+# Default = [false]
+use.email.commonpackage.config=false
+# Send the exception email to e-addresses. Can have comma seperated values.
+email.sendEmailTo.emailAddress=
+# Admin Email address. This would be included in case above entry is empty or invalid.
+email.admin.support.emailAddress=
+# Email-From Name.
+email.sendEmailFrom.name=
+# The subject line of the email.
+email.exception.subject=
+
 #Application login timeout interval in minutes.
 #Default value is 30 minutes
 session.timeout=30
