Bug 16019 -  Facility to send alert email in case of major exception in catissue.
SVN-Revision: 24136

--- a/caTissueInstall.properties
+++ b/caTissueInstall.properties
@@ -46,7 +46,7 @@ email.admin.support.emailAddress=
 # Email-From Name.
 email.sendEmailFrom.name=
 # The subject line of the email.
-email.exception.subject=
+email.exception.subject=System Exception Occured.
 
 #Application login timeout interval in minutes.
 #Default value is 30 minutes
