--- a/build.xml
+++ b/build.xml
@@ -611,6 +611,7 @@
 		<copy file="washu_deploy.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="deploy.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="DEDeploy.xml" todir="${zip.dir}" overwrite="true" />
+		<copy file="performance.properties" todir="${zip.dir}" overwrite="true" />
 		<!--copy file="log4j.xml" todir="${zip.dir}" overwrite="true" /> -->
 		<copy file="login-config.xml" todir="${zip.dir}" overwrite="true" />
 		<copy file="properties-service.xml" todir="${zip.dir}" overwrite="true" />
