--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2416,7 +2416,7 @@ app.UserID = Login ID
 wustlkey.message =Your WUSTL Key allows you to log into multiple Washington University administrative and clinical research systems. In order to use your WUSTL Key to log into caTissue, please enter your WUSTL Key and password below. If you choose not to have you account migrated to using your WUSTL Key, please press 'Proceed Without Migration'. In order to avoid seeing this page in the future if you choose not to migrate your account, please check the 'Do Not Ask Again' box.
 Wustlkey.header=WUSTL Key
 msg.item={0}
-migration.msg = Note: You are successfully migrated to WUSTL Key, Please use WUSTL Key to log in the application from the next time.
+migration.msg = Congratulations, You are successfully migrated to WUSTL Key. Please use WUSTL Key to log in the application from the next time.
 user.not.exists=User with login name {0} does not exist.
 email.washu.user=Incorrect email address, WashU domain email address
 confirm.washu.user=Incorrect confirm email address, WashU domain email address
