Cosmetic changes in Wustl Key messages
SVN-Revision: 24203

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2413,10 +2413,10 @@ errors.wustlkeyorpassword = Incorrect WUSTLKey or password.
 forgotId.wustlkey=Forgot WUSTL Key
 forgotpassword.wustlkeypassword=Forgot WUSTL Key password
 app.UserID = Login ID
-wustlkey.message =Your WUSTL Key allows you to log into multiple Washington University administrative and clinical research systems. In order to use your WUSTL Key to log into caTissue, please enter your WUSTL Key and password below. If you choose not to have you account migrated to using your WUSTL Key, please press 'Proceed Without Migration'. In order to avoid seeing this page in the future if you choose not to migrate your account, please check the 'Do Not Ask Again' box.
+wustlkey.message =Your WUSTL Key allows you to log into multiple Washington University administrative and clinical research systems. In order to use your WUSTL Key to log into caTissue, please enter your WUSTL Key and password below. If you choose not to have your account migrated to using your WUSTL Key, please press 'Proceed Without Migration'. In order to avoid seeing this page in the future if you choose not to migrate your account, please check the 'Do Not Ask Again' box.
 Wustlkey.header=WUSTL Key
 msg.item={0}
-migration.msg = Congratulations, You are successfully migrated to WUSTL Key. Please use WUSTL Key to log in the application from the next time.
+migration.msg = Congratulations, you have successfully been migrated to using your WUSTL Key. Please use your WUSTL Key to log in from now on.
 user.not.exists=User with login name {0} does not exist.
 email.washu.user=Incorrect email address, WashU domain email address
 confirm.washu.user=Incorrect confirm email address, WashU domain email address
