changes for Bug #15308, user should be able to generate labels at CP level and specimen Requirement level
SVN-Revision: 24389

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1099,7 +1099,9 @@ collectionprotocol.adduserlink=User.do
 #--collectionprotocol Add/Edit keys End--
 
 specimenprotocol.invaliddate=<li><font color="red">Start Date should be less than End Date</font></li>
-collectionProtocol.labelformat=Label Format is mandatory for custom label generation
+collectionProtocol.labelformat=Label Format is mandatory for custom label generation.
+sp.req.aliquot.labelformat=Label Format for aliquot is mandatory for custom label generation.
+sp.req.derivative.labelformat=Label Format for derivative is mandatory for custom label generation.
 #--DistributionProtocol Add/Edit keys Begin--
 distributionprotocol.name=DistributionProtocol
 distributionprotocol.details.title=Distribution Protocol Details
@@ -2323,7 +2325,7 @@ invalid.parent.specimen.identifier = Invalid Identifier of Parent Specimen :{0}
 invalid.specimen.identifier=Invalid Identifier of Specimen :{0}
 error.parent.specimen.consent.tier = Error in ConsentTierStatusCollection retrieval for Parent Specimen :{0}
 error.parent.specimen.biohazard = Error in BioHazard Collection retrieval for Parent Specimen :{0}
-label.mandatory =  Lable is a manadatory field
+label.mandatory =  Label is a mandatory field.
 msg.for.derived.spec =  (This message is for Derived Specimen {0} of Parent Specimen number )
 spec.nt.saved = specimen number {0} cannot be saved.
 child.nt.saved =  Cannot insert child specimen {0}, of specimen {1}.
