Changes for label generation feature
SVN-Revision: 24391

--- a/catissuecore-properties/LabelTokens.Properties
+++ b/catissuecore-properties/LabelTokens.Properties
@@ -1,4 +1,5 @@
 PPI=edu.wustl.catissuecore.namegenerator.LabelTokenForPPI
 STYPE=edu.wustl.catissuecore.namegenerator.LabelTokenForSpecimenType
 YEAROFCOLLECTION=edu.wustl.catissuecore.namegenerator.LabelTokenForYearOfcollection
-ID=edu.wustl.catissuecore.namegenerator.LabelTokenForId
+SYS_UID=edu.wustl.catissuecore.namegenerator.LabelTokenForId
+PPI_YOC_UID=edu.wustl.catissuecore.namegenerator.LabelTokenForPpiUId
