--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1367,7 +1367,7 @@ molecularspecimenreviewparameters.absorbanceat260=Absorbance At 260
 molecularspecimenreviewparameters.absorbanceat280=Absorbance At 280
 molecularspecimenreviewparameters.ratio28STo18S=Ratio 28S To 18S
 molecularspecimenreviewparameters.absorbanceRatioOf260/280=Absorbance ratio of 260/280
-molecularspecimenreviewparameters.absorbanceRatioOf260/280.validationMsg=Absorbance ratio cannot be calculated. Please enter valid values.
+molecularspecimenreviewparameters.absorbanceRatioOf260/280.validationMsg=Absorbance ratio cannot be calculated since value for 'Absorbance at 280' is either zero or not entered.
 molecularspecimenreviewparameters.name=Molecular Specimen Review Event Parameters
 molecularspecimenreviewparameters.title=New Molecular Specimen Review Event Parameters
 molecularspecimenreviewparameters.edittitle=Edit Molecular Specimen Review Event Parameters
