validation added to check the parent specimen collection status. For bug #17240
SVN-Revision: 24499

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -1003,6 +1003,7 @@ specimen.status=Status
 specimenType = Specimen Type
 specimenPPI = PPI
 specimenQuantity = Specimen Quantity
+specimen.parent.label.required=Parent specimen should be collected before collecting child specimen(s).
 #-- Patch ID: Bug#3184_3
 specimen.checkboxLabel=Specimen entry based on collection protocol
 print.checkboxLabel=Print Labels
