Bug 17349 -  Adobe flash player requirement should be highlighted on home page  Removed optimal resolutions and added requirement for Adobe.
SVN-Revision: 24538

--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -630,6 +630,7 @@ errors.suffix=</dt>
 #--Header,Footer Keys End--
 
 #--Main Menu Keys Begin--
+app.adobe.required <A HREF="http://get.adobe.com/flashplayer">'Adobe Flash Player'</A> is a must to use the application.
 app.certified.browsers Certified Browsers
 app.certified.ie Internet Explorer 7.0
 app.certified.mozilla Mozilla Firefox 3.5
