--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -2451,3 +2451,4 @@ specimenclass.molecular=Molecular Specimen
 #For Cross scripting support.
 xss.failure.redirect.path=XssViolation.do
 errors.xssvulnerable=<div>Some of the fields contain special characters that are not acceptable by the application. Please provide the correct information for these fields.</div>
+unsaved.data.warning=Warning: You are leaving this page and your data is not saved. Click OK to save the data.
