--- a/WEB-INF/src/ApplicationResources.properties
+++ b/WEB-INF/src/ApplicationResources.properties
@@ -639,7 +639,7 @@ app.optimal.resolutions Optimal Resolutions
 app.optimal.resolutions.win Windows - 1024 * 768
 app.optimal.resolutions.mac Mac - 1024*768
 app.name=caTissue Suite
-app.version= v1.1.p5.1
+app.version= v1.2
 app.home=HOME
 app.administrativeData=Administrative Data
 app.biospecimen=Biospecimen Data
@@ -2451,4 +2451,4 @@ specimenclass.molecular=Molecular Specimen
 #For Cross scripting support.
 xss.failure.redirect.path=XssViolation.do
 errors.xssvulnerable=<div>Some of the fields contain special characters that are not acceptable by the application. Please provide the correct information for these fields.</div>
-unsaved.data.warning=Warning: You are leaving this page and your data is not saved. Click OK to save the data.
+unsaved.data.warning=Warning\: You are leaving this page and your data is not saved. Click OK to save the data.
